overflow issue test

--- a/css/ics.css
+++ b/css/ics.css
@@ -330,7 +330,7 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	left: 45%;
+	
 }
 
 .response{
